--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "@types/node": "^20.14.7"
+    "@types/express": "^4.17.21",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/node": "^20.14.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "http-status-codes": "^2.3.0"
   }
 }
