--- a/package.json
+++ b/package.json
@@ -4,29 +4,59 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "buildrun": "tsc && node dist/app.js",
+    "build": "tsc --build --verbose",
+    "buildAndrun": "tsc --build --verbose && node dist/app.js",
     "start": "node dist/app.js",
     "dev": "ts-node-dev src/app.ts",
-    "test": "jest"
+    "test": "jest --transformIgnorePatterns \"node_modules/(?!ts-rest-api)/\" --env=jsdom"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.6.0",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.1",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.12.13",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-jest": "^26.6.2",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3"
   },
   "dependencies": {
+    "@types/chai": "^4.3.16",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.21",
     "@types/http-status-codes": "^1.2.0",
     "@types/node": "^20.14.7",
+    "@types/supertest": "^6.0.2",
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.5.2",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   }
