--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "commonjs",
+      "target": "es2022",
+      "module": "node16",
       "rootDir": "./src",
       "outDir": "./dist",
       "esModuleInterop": true,
